--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "playwright test --headed --browser=chromium",
     "test:debug": "playwright test --debug",
-    "test:codegen":"playwright codegen localhost:3000"
+    "test:codegen":"playwright codegen localhost:3000",
+    "test:bytag":"playwright test --grep @TC"
   },
   "keywords": [],
   "author": "",
